# samples

./: .gitignore  README.md
c/: strrev
c/automaker/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  httpd.c  httpd.h
c/automaker/.deps/: helloworld.Po  httpd.Po
c/automaker/autom4te.cache/: output.2  output.3  requests  traces.1  traces.2  traces.3  traces.4
c/httpd/: Makefile  httpd  httpd.c  httpd.h
c/socket/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  poll.c  select.c  socket.c
c/socket/autom4te.cache/: output.0  traces.0  traces.1
c/tree/: Makefile  tree  tree.c  tree.h
c/websever/: init.h
php/: crc32_hash.php  event.php  magic.php  qsort.php  socket_client.php  socket_server.php
php/multi-request/: benchmark.php  curl_multi.php  engine.php
php/php-fig/: index.php
php/psr-0/: index.php
python/phply/: parsetab.py
python/phply/phply.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/ply/: lex.py
thrift/: demo.thrift
thrift/gen-cpp/: Demo.cpp  Demo.h  Demo_server.cpp  Demo_server.skeleton.cpp  Makefile  demo_constants.cpp  demo_constants.h  demo_php_constants.cpp  demo_php_constants.h  demo_php_types.cpp  demo_php_types.h  demo_server  demo_types.cpp  demo_types.h
thrift/gen-php/Thrift/: TMultiplexedProcessor.php
thrift/gen-php/Thrift/ClassLoader/: ThriftClassLoader.php
thrift/gen-php/Thrift/Factory/: TTransportFactory.php
thrift/gen-php/Thrift/Protocol/: TBinaryProtocolAccelerated.php  (+4 more)
thrift/gen-php/demo/: Demo.php  Types.php  client.php
(+2 files in other folders)
