# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT(httpd.c)
AM_INIT_AUTOMAKE(httpd, 1.0)
# Checks for programs.
AC_PROG_CC
# Checks for libraries.
#AC_CHECK_LIB([libevent])
# Checks for header files.
AC_CONFIG_HEADERS(config.h)
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_OUTPUT(Makefile)
