#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(poll.c)
AM_INIT_AUTOMAKE(poll, 1.0)
 
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
